<resources>
    <string name="coll_path_universities">universities</string>
    <string name="coll_path_registers">registers</string>
    <string name="coll_path_events">events</string>
    <string name="field_university">university</string>
    <string name="field_event">event</string>
    <string name="field_users">users</string>
    <string name="field_id">id</string>
    <string name="field_login">login</string>
    <string name="field_name">name</string>
    <string name="field_names">names</string>
    <string name="field_owner">owner</string>
    <string name="field_description">description</string>
    <string name="field_date">date</string>
    <string name="field_time">time</string>
    <string name="field_people">people</string>
    <string name="field_price">price</string>
    <string name="field_phone">phone</string>
    <string name="field_checks">checks</string>
    <string name="field_friends">friends</string>
    <string name="field_friend_login">friend_login</string>
    <string name="field_signed">signed</string>
    <string name="field_password">password</string>
    <string name="field_first_name">first_name</string>
    <string name="field_second_name">second_name</string>
    <string name="field_third_name">third_name</string>
    <string name="field_birth_date">birth_date</string>
    <string name="field_gender">gender</string>
    <string name="field_edit">edit</string>
    <string name="field_data_base">data_base</string>
    <string name="shared_prefs_checked">checked</string>
    <string name="shared_prefs_name">file</string>
    <string name="delimiter">/</string>
    <string name="app_name">GreateApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="second_name">ФАМИЛИЯ</string>
    <string name="first_name">ИМЯ</string>
    <string name="third_name">ОТЧЕСТВО</string>
    <string name="birth_date">ДАТА РОЖДЕНИЯ</string>
    <string name="next">ДАЛЕЕ</string>
    <string name="man">МУЖСКОЙ</string>
    <string name="woman">ЖЕНСКИЙ</string>
    <string name="inputPass">ВВЕДИТЕ ПАРОЛЬ</string>
    <string name="repeatPass">ПОВТОРИТЕ ПАРОЛЬ</string>
    <string name="university">НАЗВАНИЕ УЧЕБНОГО ЗАВЕДЕНИЯ</string>
    <string name="captcha">СИМВОЛЫ С КАРТИНКИ</string>
    <string name="registr">ЗАРЕГЕСТРИРОВАТЬСЯ</string>
    <string name="un_registr">ЛИВНУТЬ</string>
    <string name="edit">РЕДАКТИРОВАТЬ</string>
    <string name="signedAs">ВЫ ВОШЛИ КАК:</string>
    <string name="extra">ДОПОЛНИТЕЛЬНО</string>
    <string name="add">ДОБАВИТЬ</string>
    <string name="description">ОПИСАНИЕ</string>
    <string name="date">ДАТА</string>
    <string name="time">ВРЕМЯ</string>
    <string name="number_of_people">КОЛИЧЕСТВО ЛЮДЕЙ</string>
    <string name="price">ЦЕНА</string>
    <string name="phone">ТЕЛЕФОН</string>
    <string name="name">НАЗВАНИЕ</string>
    <string name="owner">СОЗДАТЕЛЬ</string>
    <string name="title_activity_main_screen_scroll">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="remove_from_friends">УДАЛИТЬ ИЗ ДРУЗЕЙ</string>
    <string name="add_to_friends">ДОБАВИТЬ В ДРУЗЬЯ</string>
    <string name="registered_list">ЗАРЕГЕСТРИРОВАНЫ: %1$s</string>
    <string name="extra_plus">+</string>
    <string name="extra_minus">-</string>
    <string name="field_in_profile">%1$s: %2$s</string>
    <string name="login">ЛОГИН</string>
</resources>
